# control-arm-SDL

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  about_8md.html  about_8md_source.html  annotated.html  annotated_dup.js  arm_a_l5_d_8cpp.html  arm_a_l5_d_8cpp_source.html  arm_a_l5_d_8hpp.html  arm_a_l5_d_8hpp.js  arm_a_l5_d_8hpp_source.html  arm_i_8hpp.html  arm_i_8hpp.js  arm_i_8hpp_source.html  build.sh  class_arm_a_l5_d-members.html  class_arm_a_l5_d.html  class_arm_a_l5_d.js  class_arm_i-members.html  class_arm_i.html  class_arm_i.js  class_http_server-members.html  class_http_server.html  class_http_server.js  class_joystick_i-members.html  class_joystick_i.html  class_joystick_i.js  class_joystick_p_s3-members.html  class_joystick_p_s3.html  class_joystick_p_s3.js  class_joystick_vir-members.html  class_joystick_vir.html  class_joystick_vir.js  class_logger-members.html  (+116 more)
CMake/: FindLibevdev.cmake  FindLibudev.cmake  Toolchain_RPI.cmake
client/: index.html
client/public/css/: style.css
client/public/js/: app.js  requestrest.js  updateposition.js
client/script/: requestrest.js
client/templates/: index.html
config/: HORI CO.,LTD. HORIPAD S.cfg  PS3Joystick  Sony PLAYSTATION(R)3 Controller.cfg  nintendoJoystick
doxygen/: Doxyfile  about.md
includes/: ArmAL5D.hpp  ArmI.hpp  JoystickI.hpp  JoystickPS3.hpp  Keyboard.hpp  KeyboardControl.hpp  Logger.hpp  Server.hpp  TransmitionQueue.hpp  UdevHandler.hpp  api.hpp  armAL5D.hpp  armI.hpp  httpserver.hpp  joystickI.hpp  joystickPS3.hpp  joystickVir.hpp  log.h  logger.hpp  resthttp.hpp  servercontroller.hpp  transmitionqueue.hpp  udevhandler.hpp
kernel/: Makefile
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  (+60 more)
src/: ArmAL5D.cpp  JoystickPS3.cpp  KeyboardControl.cpp  Logger.cpp  Server.cpp  TransmitionQueue.cpp  UdevHandler.cpp  api.cpp  armAL5D.cpp  httpserver.cpp  joystickPS3.cpp  joystickVir.cpp  log.cpp  logger.cpp  main.cpp  resthttp.cpp  servercontroller.cpp  transmitionqueue.cpp  udevhandler.cpp
test/: CMakeLists.txt
test/testcase/: 01-simple-func.cpp  config_change_value.cfg  config_incomplet.cfg  config_invalid_input.cfg
